Merged and updated